Rename to PEAR_Cache, per Stig's request.
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@76931 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE package SYSTEM "../package.dtd">
 <package version="1.0">
- <name>Cache</name>
+ <name>PEAR_Cache</name>
  <summary>Framework for caching of arbitrary data.</summary>
  <description>
   With the PEAR Cache you can cache the result of certain function 
