Add missing <license>PHP License</license>.
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@77353 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
       <email>chregu@php.net</email>
     </maintainer>
   </maintainers>
+ <license>PHP License</license>
  <release>
   <version>1.2</version>
   <date>2002-01-20</date>
