--- a/package.xml
+++ b/package.xml
@@ -29,15 +29,15 @@ between applications.
   </maintainers>
   <license>PHP License</license>
   <release>
-    <version>1.3</version>
-    <date>2002-05-20</date>
+    <version>1.4</version>
+    <date>2002-05-23</date>
     <state>stable</state>
     <notes>
 Fixed packaging.
     </notes>
     <filelist>
-      <dir name="/" baseinstalldir="Cache">
-        <dir name="Container">
+      <dir name="/">
+        <dir name="Container" baseinstalldir="Cache">
           <file role="php" name="db.php" />
           <file role="php" name="dbx.php" />
           <file role="php" name="file.php" />
@@ -46,19 +46,27 @@ Fixed packaging.
           <file role="php" name="shm.php" />
         </dir>
 
-        <file role="php" name="Application.php" />
-        <file role="php" name="Cache.php" />
-        <file role="php" name="Container.php" />
-        <file role="php" name="DB.php" />
-        <file role="php" name="Error.php" />
-        <file role="php" name="Function.php" />
-        <file role="php" name="Graphics.php" />
-        <file role="php" name="Output.php" />
-        <file role="php" name="OutputCompression.php" />
+        <file baseinstalldir="Cache" role="php" name="Application.php" />
+        <file baseinstalldir="Cache" role="php" name="Cache.php" />
+        <file baseinstalldir="Cache" role="php" name="Container.php" />
+        <file baseinstalldir="Cache" role="php" name="DB.php" />
+        <file baseinstalldir="Cache" role="php" name="Error.php" />
+        <file baseinstalldir="Cache" role="php" name="Function.php" />
+        <file baseinstalldir="Cache" role="php" name="Graphics.php" />
+        <file baseinstalldir="Cache" role="php" name="Output.php" />
+        <file baseinstalldir="Cache" role="php" name="OutputCompression.php" />
       </dir>
     </filelist>
   </release>
   <changelog>
+    <release>
+      <version>1.3</version>
+      <date>2002-05-20</date>
+      <state>stable</state>
+      <notes>
+Fixed packaging.
+      </notes>
+    </release>
     <release>
       <version>1.2</version>
       <date>2002-01-20</date>
