--- a/package.xml
+++ b/package.xml
@@ -29,8 +29,8 @@ between applications.
   </maintainers>
   <license>PHP License</license>
   <release>
-    <version>1.4</version>
-    <date>2002-05-23</date>
+    <version>1.5</version>
+    <date>2002-XX-XX</date>
     <state>stable</state>
     <notes>
 Fixed packaging.
@@ -59,6 +59,14 @@ Fixed packaging.
     </filelist>
   </release>
   <changelog>
+    <release>
+      <version>1.4</version>
+      <date>2002-05-23</date>
+      <state>stable</state>
+      <notes>
+Fixed packaging.
+      </notes>
+    </release>
     <release>
       <version>1.3</version>
       <date>2002-05-20</date>
