Hopefully this lets me upload a release.
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@83297 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -16,7 +16,7 @@ between applications.
     </maintainer>
     <maintainer>
       <user>sebastian</user>
-      <role>developer</role>
+      <role>lead</role>
       <name>Sebastian Bergmann</name>
       <email>sb@sebastian-bergmann.de</email>
     </maintainer>
