Install Cache.php in the base dir # I'm having a deja-vu Sebastian ;-)
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@83301 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -45,9 +45,8 @@ Fixed packaging.
           <file role="php" name="phplib.php" />
           <file role="php" name="shm.php" />
         </dir>
-
+        <file role="php" name="Cache.php" />
         <file baseinstalldir="Cache" role="php" name="Application.php" />
-        <file baseinstalldir="Cache" role="php" name="Cache.php" />
         <file baseinstalldir="Cache" role="php" name="Container.php" />
         <file baseinstalldir="Cache" role="php" name="DB.php" />
         <file baseinstalldir="Cache" role="php" name="Error.php" />
