--- a/package.xml
+++ b/package.xml
@@ -29,11 +29,10 @@ between applications.
   </maintainers>
   <license>PHP License</license>
   <release>
-    <version>1.4</version>
-    <date>2002-05-24</date>
+    <version>1.5</version>
+    <date>2002-XX-XX</date>
     <state>stable</state>
     <notes>
-Fixed packaging.
     </notes>
     <filelist>
       <dir name="/">
@@ -58,6 +57,14 @@ Fixed packaging.
     </filelist>
   </release>
   <changelog>
+    <release>
+      <version>1.4</version>
+      <date>2002-05-24</date>
+      <state>stable</state>
+      <notes>
+Fixed packaging.
+      </notes>
+    </release>
     <release>
       <version>1.3</version>
       <date>2002-05-20</date>
