--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,9 @@ between applications.
         <file baseinstalldir="Cache" role="php" name="OutputCompression.php" />
       </dir>
     </filelist>
+    <deps>
+      <dep type="pkg" rel="has">HTTP_Request</dep>
+    </deps>
   </release>
   <changelog>
     <release>
