ARGH... install Cache.php in the base dir..
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@83985 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -39,7 +39,7 @@ between applications.
     <filelist>
       <dir name="/" baseinstalldir="Cache">
 
-        <file role="php" name="Cache.php" />
+        <file role="php" baseinstalldir="/" name="Cache.php" />
         <file role="php" name="Application.php" />
         <file role="php" name="Container.php" />
         <file role="php" name="DB.php" />
