--- a/package.xml
+++ b/package.xml
@@ -29,11 +29,14 @@ between applications.
   </maintainers>
   <license>PHP License</license>
   <release>
-    <version>1.5.x</version>
-    <date>2002-11-08</date>
+    <version>1.5.3</version>
+    <date>2003-02-19</date>
     <state>stable</state>
     <notes>
-	- Added Lorenzo Alberton's MDB_Container
+- Added Lorenzo Alberton's MDB_Container
+- added max_userdata_filelength as option to file container
+- added (optional) filelocking to file container (by dave winer)
+- fixes in errorchecking and garbage collection in db container
     </notes>
     <filelist>
       <dir name="/" baseinstalldir="Cache">
@@ -63,63 +66,4 @@ between applications.
       <dep type="pkg" rel="has">HTTP_Request</dep>
     </deps>
   </release>
-  <changelog>
-<release>
-    <version>1.5.2</version>
-    <date>2002-08-08</date>
-    <state>stable</state>
-    <notes>
-Fixed packaging again, install Cache.php in BaseDir and rest in Cache
-please do not change the baseinstalldir again :) (pajoye)
-    </notes>
-</release>
-<release>
-    <version>1.5.1</version>
-    <date>2002-05-29</date>
-    <state>stable</state>
-    <notes>
-Fixed packaging again (install Cache.php in BaseDir) (chregu)
-    </notes>
-</release>
-  <release>
-    <version>1.5</version>
-    <date>2002-05-29</date>
-    <state>stable</state>
-    <notes>
-Added Cache_HTTP_Request. (Fabien Marty)
-Fixed package.xml (chregu)
-    </notes>
-	</release>
-    <release>
-      <version>1.4</version>
-      <date>2002-05-24</date>
-      <state>stable</state>
-      <notes>
-Fixed packaging.
-      </notes>
-    </release>
-    <release>
-      <version>1.3</version>
-      <date>2002-05-20</date>
-      <state>stable</state>
-      <notes>
-Fixed packaging.
-      </notes>
-    </release>
-    <release>
-      <version>1.2</version>
-      <date>2002-01-20</date>
-      <state>stable</state>
-      <notes>
-This is the initial independent PEAR release.
-      </notes>
-    </release>
-    <release>
-      <version>1.1</version>
-      <date>2001-03-27</date>
-      <notes>
-Stable Code, SHM implementation missing.
-      </notes>
-    </release>
-  </changelog>
 </package>
