--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,12 @@ between applications.
       <name>Ulf Wendel</name>
       <email>ulf.wendel@phpdoc.de</email>
     </maintainer>
+    <maintainer>
+      <user>dufuz</user>
+      <role>lead</role>
+      <name>Helgi Þormar</name>
+      <email>dufuz@php.net</email>
+    </maintainer>
   </maintainers>
   <license>PHP License</license>
   <release>
