--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,7 @@ between applications.
  - Bug 1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
  - PHP Bug 25134/PEAR bug 2955, typo fix by Greg in msession container, disallowed id_length
  - Bug 2749, flush() done 2x in a row gave error about none existing directory.
+ - ETag made RFC compailant in OutputCompression (by mike)
  - CS fixes
     </notes>
     <filelist>
