replaced non-latin characters with entities
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@180853 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@ between applications.
     <maintainer>
       <user>dufuz</user>
       <role>lead</role>
-      <name>Helgi Þormar</name>
+      <name>Helgi &#x00DE;ormar</name>
       <email>dufuz@php.net</email>
     </maintainer>
   </maintainers>
