Fix my name and prepare for a release.
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@185441 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -23,14 +23,14 @@ between applications.
     <maintainer>
       <user>dufuz</user>
       <role>lead</role>
-      <name>Helgi &THORN;ormar</name>
+      <name>Helgi &#222;ormar</name>
       <email>dufuz@php.net</email>
     </maintainer>
   </maintainers>
   <license>PHP License</license>
   <release>
     <version>1.5.5RC1</version>
-    <date>2004-12-X</date>
+    <date>2005-04-29</date>
     <state>beta</state>
     <notes>
  - Bug #1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
