Fix bug #4429 Call-time pass-by-reference has been deprecated
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@186977 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -29,11 +29,11 @@ between applications.
   </maintainers>
   <license>PHP License</license>
   <release>
-    <version>1.5.5RC2</version>
-    <date>2005-05-18</date>
+    <version>1.5.5RC3</version>
+    <date>2005-05-25</date>
     <state>beta</state>
     <notes>
- - package.xml was giving errors when installed because of new line at the end.
+ - Fixed bug #4429 Call-time pass-by-reference has been deprecated
     </notes>
     <filelist>
       <dir name="/" baseinstalldir="Cache">
@@ -65,6 +65,13 @@ between applications.
     </deps>
   </release>
   <changelog>
+   <version>1.5.5RC2</version>
+   <date>2005-05-18</date>
+   <state>beta</state>
+   <notes>
+ - package.xml was giving errors when installed because of new line at the end.
+   </notes>
+  </release>
   <release>
     <version>1.5.5RC1</version>
     <date>2005-04-29</date>
