--- a/package.xml
+++ b/package.xml
@@ -1,109 +1,160 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<package version="1.0">
-  <name>Cache</name>
-  <summary>Framework for caching of arbitrary data.</summary>
-  <description>
-With the PEAR Cache you can cache the result of certain function
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.8.0alpha1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+http://pear.php.net/dtd/tasks-1.0.xsd
+http://pear.php.net/dtd/package-2.0
+http://pear.php.net/dtd/package-2.0.xsd">
+ <name>Cache</name>
+ <channel>pear.php.net</channel>
+ <summary>Framework for caching of arbitrary data.</summary>
+ <description>With the PEAR Cache you can cache the result of certain function
 calls, as well as the output of a whole script run or share data
 between applications.
-  </description>
-  <maintainers>
-    <maintainer>
-      <user>chregu</user>
-      <role>lead</role>
-      <name>Christian Stocker</name>
-      <email>chregu@php.net</email>
-      <active>false</active>
-    </maintainer>
-    <maintainer>
-      <user>uw</user>
-      <role>developer</role>
-      <name>Ulf Wendel</name>
-      <email>ulf.wendel@phpdoc.de</email>
-      <active>false</active>
-    </maintainer>
-    <maintainer>
-      <user>dufuz</user>
-      <role>lead</role>
-      <name>Helgi &#222;ormar</name>
-      <email>dufuz@php.net</email>
-    </maintainer>
-  </maintainers>
-  <license>PHP License</license>
+
+ </description>
+ <lead>
+  <name>Christian Stocker</name>
+  <user>chregu</user>
+  <email>chregu@php.net</email>
+  <active>no</active>
+ </lead>
+ <lead>
+  <name>Helgi Þormar</name>
+  <user>dufuz</user>
+  <email>dufuz@php.net</email>
+  <active>yes</active>
+ </lead>
+ <developer>
+  <name>Ulf Wendel</name>
+  <user>uw</user>
+  <email>ulf.wendel@phpdoc.de</email>
+  <active>no</active>
+ </developer>
+ <date>2008-10-07</date>
+ <time>09:54:50</time>
+ <version>
+  <release>1.5.5RC4</release>
+  <api>1.5.5RC4</api>
+ </version>
+ <stability>
+  <release>beta</release>
+  <api>beta</api>
+ </stability>
+ <license uri="http://www.php.net/license">PHP License</license>
+ <notes>- Fixed Bug #4449 XML errors during installation
+
+ </notes>
+ <contents>
+  <dir name="/">
+   <dir name="Container">
+    <file baseinstalldir="Cache" name="db.php" role="php" />
+    <file baseinstalldir="Cache" name="dbx.php" role="php" />
+    <file baseinstalldir="Cache" name="file.php" role="php" />
+    <file baseinstalldir="Cache" name="mdb.php" role="php" />
+    <file baseinstalldir="Cache" name="mdb_cache_schema.xml" role="data" />
+    <file baseinstalldir="Cache" name="msession.php" role="php" />
+    <file baseinstalldir="Cache" name="phplib.php" role="php" />
+    <file baseinstalldir="Cache" name="shm.php" role="php" />
+    <file baseinstalldir="Cache" name="trifile.php" role="php" />
+   </dir> <!-- //Container -->
+   <file baseinstalldir="Cache" name="Application.php" role="php" />
+   <file baseinstalldir="/" name="Cache.php" role="php" />
+   <file baseinstalldir="Cache" name="Container.php" role="php" />
+   <file baseinstalldir="Cache" name="Error.php" role="php" />
+   <file baseinstalldir="Cache" name="Function.php" role="php" />
+   <file baseinstalldir="Cache" name="Graphics.php" role="php" />
+   <file baseinstalldir="Cache" name="HTTP_Request.php" role="php" />
+   <file baseinstalldir="Cache" name="Output.php" role="php" />
+   <file baseinstalldir="Cache" name="OutputCompression.php" role="php" />
+  </dir> <!-- / -->
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>4.0.0</min>
+   </php>
+   <pearinstaller>
+    <min>1.4.0b1</min>
+   </pearinstaller>
+   <package>
+    <name>PEAR</name>
+    <channel>pear.php.net</channel>
+    <min>1.3.5</min>
+   </package>
+  </required>
+  <optional>
+   <package>
+    <name>HTTP_Request</name>
+    <channel>pear.php.net</channel>
+   </package>
+  </optional>
+ </dependencies>
+ <phprelease />
+ <changelog>
   <release>
-    <version>1.5.5RC4</version>
-    <date>2005-09-14</date>
-    <state>beta</state>
-    <notes>
- - Fixed Bug #4449 XML errors during installation
-    </notes>
-    <filelist>
-      <dir name="/" baseinstalldir="Cache">
-        <file role="php" baseinstalldir="/" name="Cache.php" />
-        <file role="php" name="Application.php" />
-        <file role="php" name="Container.php" />
-        <file role="php" name="Error.php" />
-        <file role="php" name="Function.php" />
-        <file role="php" name="Graphics.php" />
-        <file role="php" name="HTTP_Request.php" />
-        <file role="php" name="Output.php" />
-        <file role="php" name="OutputCompression.php" />
-        <dir name="Container">
-          <file role="php" name="db.php" />
-          <file role="php" name="dbx.php" />
-          <file role="php" name="mdb.php" />
-          <file role="data" name="mdb_cache_schema.xml" />
-          <file role="php" name="file.php" />
-          <file role="php" name="msession.php" />
-          <file role="php" name="phplib.php" />
-          <file role="php" name="shm.php" />
-          <file role="php" name="trifile.php" />
-        </dir>
-      </dir>
-    </filelist>
-    <deps>
-      <dep type="pkg" rel="ge" version="1.3.5" optional="no">PEAR</dep>
-      <dep type="pkg" rel="has" optional="yes">HTTP_Request</dep>
-    </deps>
+   <version>
+    <release>1.5.5RC3</release>
+    <api>1.5.5RC3</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-05-25</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>- Fixed bug #4429 Call-time pass-by-reference has been deprecated
+
+   </notes>
   </release>
-  <changelog>
-   <release>
-    <version>1.5.5RC3</version>
-    <date>2005-05-25</date>
-    <state>beta</state>
-    <notes>
-- Fixed bug #4429 Call-time pass-by-reference has been deprecated
-    </notes>
-   </release>
-   <release>
-    <version>1.5.5RC2</version>
-    <date>2005-05-18</date>
-    <state>beta</state>
-    <notes>
- - package.xml was giving errors when installed because of new line at the end.
-    </notes>
-   </release>
-   <release>
-    <version>1.5.5RC1</version>
-    <date>2005-04-29</date>
-    <state>beta</state>
-    <notes>
- - Bug #1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
- - PHP Bug #25134 / PEAR bug #2955, typo fix by Greg in msession container, disallowed id_length
- - Bug #2749, flush() done 2x in a row gave error about none existing directory.
- - ETag made RFC compailant in OutputCompression (by mike)
- - Bug #3515 typo fix in file container, spotted by Girish dot Nair1 at cognizant dot com
- - CS fixes
-    </notes>
-   </release>
-   <release>
-        <version>1.5.4</version>
-    <date>2004-04-01</date>
-    <state>stable</state>
-    <notes>
-- Removed Cache_DB as it apparently never really worked.
+  <release>
+   <version>
+    <release>1.5.5RC2</release>
+    <api>1.5.5RC2</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-05-18</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>- package.xml was giving errors when installed because of new line at the end.
+
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.5RC1</release>
+    <api>1.5.5RC1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-04-29</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>- Bug #1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
+- PHP Bug #25134 / PEAR bug #2955, typo fix by Greg in msession container, disallowed id_length
+- Bug #2749, flush() done 2x in a row gave error about none existing directory.
+- ETag made RFC compailant in OutputCompression (by mike)
+- Bug #3515 typo fix in file container, spotted by Girish dot Nair1 at cognizant dot com
+- CS fixes
+
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.4</release>
+    <api>1.5.4</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2004-04-01</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>- Removed Cache_DB as it apparently never really worked.
 - Added trifile container. See http://atomized.org/PEAR/Cache_trifile.html for more information. (By Ian Eure)
-    </notes>
-   </release>
-  </changelog>
+
+   </notes>
+  </release>
+ </changelog>
 </package>
