--- a/package.xml
+++ b/package.xml
@@ -32,16 +32,16 @@ between applications.
  <date>2008-10-07</date>
  <time>09:54:50</time>
  <version>
-  <release>1.5.5RC4</release>
-  <api>1.5.5RC4</api>
+  <release>1.5.5</release>
+  <api>1.5.5</api>
  </version>
  <stability>
-  <release>beta</release>
-  <api>beta</api>
+  <release>stable</release>
+  <api>stable</api>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
- <notes>- Fixed Bug #4449 XML errors during installation
-
+ <notes>
+  - Fixed Bug #14673: Security issue due to seeding random number generator
  </notes>
  <contents>
   <dir name="/">
@@ -70,15 +70,15 @@ between applications.
  <dependencies>
   <required>
    <php>
-    <min>4.0.0</min>
+    <min>4.3.0</min>
    </php>
    <pearinstaller>
-    <min>1.4.0b1</min>
+    <min>1.7.0</min>
    </pearinstaller>
    <package>
     <name>PEAR</name>
     <channel>pear.php.net</channel>
-    <min>1.3.5</min>
+    <min>1.7.0</min>
    </package>
   </required>
   <optional>
@@ -90,6 +90,20 @@ between applications.
  </dependencies>
  <phprelease />
  <changelog>
+  <release>
+  <version>
+   <release>1.5.5RC4</release>
+   <api>1.5.5RC4</api>
+  </version>
+  <stability>
+   <release>beta</release>
+   <api>beta</api>
+  </stability>
+  <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+    - Fixed Bug #4449 XML errors during installation
+   </notes>
+  </release>
   <release>
    <version>
     <release>1.5.5RC3</release>
