--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.8.0alpha1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-http://pear.php.net/dtd/tasks-1.0.xsd
-http://pear.php.net/dtd/package-2.0
-http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Cache</name>
  <channel>pear.php.net</channel>
  <summary>Framework for caching of arbitrary data.</summary>
  <description>With the PEAR Cache you can cache the result of certain function
 calls, as well as the output of a whole script run or share data
-between applications.
-
- </description>
+between applications.</description>
  <lead>
   <name>Christian Stocker</name>
   <user>chregu</user>
@@ -29,10 +24,10 @@ between applications.
   <email>ulf.wendel@phpdoc.de</email>
   <active>no</active>
  </developer>
- <date>2008-10-07</date>
- <time>09:54:50</time>
+ <date>2010-10-25</date>
+ <time>23:19:23</time>
  <version>
-  <release>1.5.5</release>
+  <release>1.5.6</release>
   <api>1.5.5</api>
  </version>
  <stability>
@@ -41,31 +36,30 @@ between applications.
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  - Fixed Bug #14673: Security issue due to seeding random number generator
+Automatically built QA release
+Bug #17020 PHP-Error - doconnor
  </notes>
  <contents>
-  <dir name="/">
-   <dir name="Container">
-    <file baseinstalldir="Cache" name="db.php" role="php" />
-    <file baseinstalldir="Cache" name="dbx.php" role="php" />
-    <file baseinstalldir="Cache" name="file.php" role="php" />
-    <file baseinstalldir="Cache" name="mdb.php" role="php" />
-    <file baseinstalldir="Cache" name="mdb_cache_schema.xml" role="data" />
-    <file baseinstalldir="Cache" name="msession.php" role="php" />
-    <file baseinstalldir="Cache" name="phplib.php" role="php" />
-    <file baseinstalldir="Cache" name="shm.php" role="php" />
-    <file baseinstalldir="Cache" name="trifile.php" role="php" />
-   </dir> <!-- //Container -->
-   <file baseinstalldir="Cache" name="Application.php" role="php" />
-   <file baseinstalldir="/" name="Cache.php" role="php" />
-   <file baseinstalldir="Cache" name="Container.php" role="php" />
-   <file baseinstalldir="Cache" name="Error.php" role="php" />
-   <file baseinstalldir="Cache" name="Function.php" role="php" />
-   <file baseinstalldir="Cache" name="Graphics.php" role="php" />
-   <file baseinstalldir="Cache" name="HTTP_Request.php" role="php" />
-   <file baseinstalldir="Cache" name="Output.php" role="php" />
-   <file baseinstalldir="Cache" name="OutputCompression.php" role="php" />
-  </dir> <!-- / -->
+  <dir baseinstalldir="Cache" name="/">
+   <file baseinstalldir="Cache" md5sum="813b8e26d3622e06f26ecd94a857d08e" name="Container/db.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="a5531e7199b363ba76cd6282e026cb50" name="Container/dbx.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="6b8e82475ed5e52cf9fac8bde33a8df2" name="Container/file.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="aee8c8ca5d827737f0ff208753ea040f" name="Container/mdb.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="f769958f25c4b7d56835c7366392dad4" name="Container/mdb_cache_schema.xml" role="data" />
+   <file baseinstalldir="Cache" md5sum="22d1ce17bde3bdfcf11d4284777ae82b" name="Container/msession.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="34b306e606c74a47b9bebd4db7765d1b" name="Container/phplib.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="15c92ba528b5cadda612d03e4c2b1ee0" name="Container/shm.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="6b81b3dee3b47bd476837d586047e679" name="Container/trifile.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="ee708f10ab99524268b4ed6f007128bb" name="Application.php" role="php" />
+   <file baseinstalldir="/" md5sum="cbafdcca7f84626e30100416b51dd5df" name="Cache.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="4fb61531b4f06644c553460f056bdeb3" name="Container.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="9c437ff95bace3d2b6458ac6a9c46820" name="Error.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="01087275335fde844e3bbf691080e145" name="Function.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="3a247785751547dee09e893a4c21a625" name="Graphics.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="f7502118bf94b83be21e3f0fa5313e2d" name="HTTP_Request.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="4fd81b5a2da37b68706ee515af15b837" name="Output.php" role="php" />
+   <file baseinstalldir="Cache" md5sum="699a8ad0e147b5f94d71ac73aca04506" name="OutputCompression.php" role="php" />
+  </dir>
  </contents>
  <dependencies>
   <required>
@@ -91,67 +85,17 @@ between applications.
  <phprelease />
  <changelog>
   <release>
-  <version>
-   <release>1.5.5RC4</release>
-   <api>1.5.5RC4</api>
-  </version>
-  <stability>
-   <release>beta</release>
-   <api>beta</api>
-  </stability>
-  <license uri="http://www.php.net/license">PHP License</license>
+   <version>
+    <release>1.5.5RC4</release>
+    <api>1.5.5RC4</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <license uri="http://www.php.net/license">PHP License</license>
    <notes>
-    - Fixed Bug #4449 XML errors during installation
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>1.5.5RC3</release>
-    <api>1.5.5RC3</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2005-05-25</date>
-   <license uri="http://www.php.net/license">PHP License</license>
-   <notes>- Fixed bug #4429 Call-time pass-by-reference has been deprecated
-
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>1.5.5RC2</release>
-    <api>1.5.5RC2</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2005-05-18</date>
-   <license uri="http://www.php.net/license">PHP License</license>
-   <notes>- package.xml was giving errors when installed because of new line at the end.
-
-   </notes>
-  </release>
-  <release>
-   <version>
-    <release>1.5.5RC1</release>
-    <api>1.5.5RC1</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-   <date>2005-04-29</date>
-   <license uri="http://www.php.net/license">PHP License</license>
-   <notes>- Bug #1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
-- PHP Bug #25134 / PEAR bug #2955, typo fix by Greg in msession container, disallowed id_length
-- Bug #2749, flush() done 2x in a row gave error about none existing directory.
-- ETag made RFC compailant in OutputCompression (by mike)
-- Bug #3515 typo fix in file container, spotted by Girish dot Nair1 at cognizant dot com
-- CS fixes
-
+- Fixed Bug #4449 XML errors during installation
    </notes>
   </release>
   <release>
@@ -165,9 +109,75 @@ between applications.
    </stability>
    <date>2004-04-01</date>
    <license uri="http://www.php.net/license">PHP License</license>
-   <notes>- Removed Cache_DB as it apparently never really worked.
+   <notes>
+- Removed Cache_DB as it apparently never really worked.
 - Added trifile container. See http://atomized.org/PEAR/Cache_trifile.html for more information. (By Ian Eure)
-
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.5RC1</release>
+    <api>1.5.5RC1</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-04-29</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- Bug #1999 typo fix by Ian Eure, prevented the saving of $userdata in Trifile container
+- PHP Bug #25134 / PEAR bug #2955, typo fix by Greg in msession container, disallowed id_length
+- Bug #2749, flush() done 2x in a row gave error about none existing directory.
+- ETag made RFC compailant in OutputCompression (by mike)
+- Bug #3515 typo fix in file container, spotted by Girish dot Nair1 at cognizant dot com
+- CS fixes
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.5RC2</release>
+    <api>1.5.5RC2</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-05-18</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- package.xml was giving errors when installed because of new line at the end.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.5RC3</release>
+    <api>1.5.5RC3</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-05-25</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- Fixed bug #4429 Call-time pass-by-reference has been deprecated
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.6</release>
+    <api>1.5.5</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2010-10-25</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Automatically built QA release
+Bug #17020 PHP-Error - doconnor
    </notes>
   </release>
  </changelog>
