update package.xml after file reorganization
git-svn-id: http://svn.php.net/repository/pear/packages/Cache/trunk@315104 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0"
+ xmlns="http://pear.php.net/dtd/package-2.0"
+ xmlns:tasks="http://pear.php.net/dtd/tasks-1.0"
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
+                     http://pear.php.net/dtd/tasks-1.0.xsd
+                     http://pear.php.net/dtd/package-2.0
+                     http://pear.php.net/dtd/package-2.0.xsd"
+>
  <name>Cache</name>
  <channel>pear.php.net</channel>
  <summary>Framework for caching of arbitrary data.</summary>
  <description>With the PEAR Cache you can cache the result of certain function
 calls, as well as the output of a whole script run or share data
 between applications.</description>
+
  <lead>
   <name>Christian Stocker</name>
   <user>chregu</user>
@@ -24,8 +33,10 @@ between applications.</description>
   <email>ulf.wendel@phpdoc.de</email>
   <active>no</active>
  </developer>
+
  <date>2010-10-25</date>
  <time>23:19:23</time>
+
  <version>
   <release>1.5.6</release>
   <api>1.5.5</api>
@@ -34,33 +45,42 @@ between applications.</description>
   <release>stable</release>
   <api>stable</api>
  </stability>
+
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
 Automatically built QA release
 Bug #17020 PHP-Error - doconnor
  </notes>
+
  <contents>
-  <dir baseinstalldir="Cache" name="/">
-   <file baseinstalldir="Cache" md5sum="813b8e26d3622e06f26ecd94a857d08e" name="Container/db.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="a5531e7199b363ba76cd6282e026cb50" name="Container/dbx.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="6b8e82475ed5e52cf9fac8bde33a8df2" name="Container/file.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="aee8c8ca5d827737f0ff208753ea040f" name="Container/mdb.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="f769958f25c4b7d56835c7366392dad4" name="Container/mdb_cache_schema.xml" role="data" />
-   <file baseinstalldir="Cache" md5sum="22d1ce17bde3bdfcf11d4284777ae82b" name="Container/msession.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="34b306e606c74a47b9bebd4db7765d1b" name="Container/phplib.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="15c92ba528b5cadda612d03e4c2b1ee0" name="Container/shm.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="6b81b3dee3b47bd476837d586047e679" name="Container/trifile.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="ee708f10ab99524268b4ed6f007128bb" name="Application.php" role="php" />
-   <file baseinstalldir="/" md5sum="cbafdcca7f84626e30100416b51dd5df" name="Cache.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="4fb61531b4f06644c553460f056bdeb3" name="Container.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="9c437ff95bace3d2b6458ac6a9c46820" name="Error.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="01087275335fde844e3bbf691080e145" name="Function.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="3a247785751547dee09e893a4c21a625" name="Graphics.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="f7502118bf94b83be21e3f0fa5313e2d" name="HTTP_Request.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="4fd81b5a2da37b68706ee515af15b837" name="Output.php" role="php" />
-   <file baseinstalldir="Cache" md5sum="699a8ad0e147b5f94d71ac73aca04506" name="OutputCompression.php" role="php" />
+  <dir baseinstalldir="/" name="/">
+   <dir name="Cache">
+    <dir name="Container">
+     <file name="db.php" role="php" />
+     <file name="dbx.php" role="php" />
+     <file name="file.php" role="php" />
+     <file name="mdb.php" role="php" />
+     <file name="mdb_cache_schema.xml" role="data" />
+     <file name="msession.php" role="php" />
+     <file name="phplib.php" role="php" />
+     <file name="shm.php" role="php" />
+     <file name="trifile.php" role="php" />
+    </dir>
+    <dir name="HTTP">
+     <file name="Request.php" role="php" />
+    </dir>
+    <file name="Application.php" role="php" />
+    <file name="Container.php" role="php" />
+    <file name="Error.php" role="php" />
+    <file name="Function.php" role="php" />
+    <file name="Graphics.php" role="php" />
+    <file name="Output.php" role="php" />
+    <file name="OutputCompression.php" role="php" />
+   </dir>
+   <file name="Cache.php" role="php" />
   </dir>
  </contents>
+
  <dependencies>
   <required>
    <php>
@@ -82,7 +102,9 @@ Bug #17020 PHP-Error - doconnor
    </package>
   </optional>
  </dependencies>
+
  <phprelease />
+
  <changelog>
   <release>
    <version>
@@ -98,6 +120,7 @@ Bug #17020 PHP-Error - doconnor
 - Fixed Bug #4449 XML errors during installation
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.5.4</release>
@@ -114,6 +137,7 @@ Bug #17020 PHP-Error - doconnor
 - Added trifile container. See http://atomized.org/PEAR/Cache_trifile.html for more information. (By Ian Eure)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.5.5RC1</release>
@@ -134,6 +158,7 @@ Bug #17020 PHP-Error - doconnor
 - CS fixes
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.5.5RC2</release>
@@ -149,6 +174,7 @@ Bug #17020 PHP-Error - doconnor
 - package.xml was giving errors when installed because of new line at the end.
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.5.5RC3</release>
@@ -164,6 +190,7 @@ Bug #17020 PHP-Error - doconnor
 - Fixed bug #4429 Call-time pass-by-reference has been deprecated
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.5.6</release>
