--- a/package.xml
+++ b/package.xml
@@ -25,7 +25,7 @@ between applications.</description>
   <name>Helgi Þormar</name>
   <user>dufuz</user>
   <email>dufuz@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
  <developer>
   <name>Ulf Wendel</name>
@@ -33,19 +33,16 @@ between applications.</description>
   <email>ulf.wendel@phpdoc.de</email>
   <active>no</active>
  </developer>
-
  <date>2010-10-25</date>
  <time>23:19:23</time>
-
  <version>
-  <release>1.5.6</release>
+  <release>1.5.7</release>
   <api>1.5.5</api>
  </version>
  <stability>
   <release>stable</release>
   <api>stable</api>
  </stability>
-
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
 Automatically built QA release
@@ -115,6 +112,7 @@ Bug #17020 PHP-Error - doconnor
     <release>beta</release>
     <api>beta</api>
    </stability>
+    <date>2005-09-14</date>
    <license uri="http://www.php.net/license">PHP License</license>
    <notes>
 - Fixed Bug #4449 XML errors during installation
