--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0"
- xmlns="http://pear.php.net/dtd/package-2.0"
- xmlns:tasks="http://pear.php.net/dtd/tasks-1.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-                     http://pear.php.net/dtd/tasks-1.0.xsd
-                     http://pear.php.net/dtd/package-2.0
-                     http://pear.php.net/dtd/package-2.0.xsd"
->
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0                      http://pear.php.net/dtd/tasks-1.0.xsd                      http://pear.php.net/dtd/package-2.0                      http://pear.php.net/dtd/package-2.0.xsd">
  <name>Cache</name>
  <channel>pear.php.net</channel>
  <summary>Framework for caching of arbitrary data.</summary>
  <description>With the PEAR Cache you can cache the result of certain function
 calls, as well as the output of a whole script run or share data
 between applications.</description>
-
  <lead>
   <name>Christian Stocker</name>
   <user>chregu</user>
@@ -33,8 +24,8 @@ between applications.</description>
   <email>ulf.wendel@phpdoc.de</email>
   <active>no</active>
  </developer>
- <date>2010-10-25</date>
- <time>23:19:23</time>
+ <date>2011-09-15</date>
+ <time>14:25:11</time>
  <version>
   <release>1.5.7</release>
   <api>1.5.5</api>
@@ -45,39 +36,38 @@ between applications.</description>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-Automatically built QA release
-Bug #17020 PHP-Error - doconnor
+QA release
+Bug #18409 package.xml invalid, not installable with pyrus
+Bug #18734 proposal of code to start new features
+Bug #18742 container Constructor fail
+Bug #18743 Unit Tests
  </notes>
-
  <contents>
   <dir baseinstalldir="/" name="/">
-   <dir name="Cache">
-    <dir name="Container">
-     <file name="db.php" role="php" />
-     <file name="dbx.php" role="php" />
-     <file name="file.php" role="php" />
-     <file name="mdb.php" role="php" />
-     <file name="mdb_cache_schema.xml" role="data" />
-     <file name="msession.php" role="php" />
-     <file name="phplib.php" role="php" />
-     <file name="shm.php" role="php" />
-     <file name="trifile.php" role="php" />
-    </dir>
-    <dir name="HTTP">
-     <file name="Request.php" role="php" />
-    </dir>
-    <file name="Application.php" role="php" />
-    <file name="Container.php" role="php" />
-    <file name="Error.php" role="php" />
-    <file name="Function.php" role="php" />
-    <file name="Graphics.php" role="php" />
-    <file name="Output.php" role="php" />
-    <file name="OutputCompression.php" role="php" />
-   </dir>
-   <file name="Cache.php" role="php" />
+   <file baseinstalldir="/" md5sum="026358693f5f7718aab490b3b069e08c" name="/Cache/Application.php" role="php" />
+   <file baseinstalldir="/" md5sum="5be55e65a4bc6b1ce6e4389c7144cc01" name="/Cache/Container.php" role="php" />
+   <file baseinstalldir="/" md5sum="f4d9a72fe95075e9c74e4a80dcaf7329" name="/Cache/Error.php" role="php" />
+   <file baseinstalldir="/" md5sum="eca50102508742845591e14b9e0f91b2" name="/Cache/Function.php" role="php" />
+   <file baseinstalldir="/" md5sum="66cbf2681bd8b4b233e63f381231354d" name="/Cache/Graphics.php" role="php" />
+   <file baseinstalldir="/" md5sum="2b3604cbc488f4073b9c99a38e9c090e" name="/Cache/Output.php" role="php" />
+   <file baseinstalldir="/" md5sum="8743558261964bde1b2c7afaaa5aec23" name="/Cache/OutputCompression.php" role="php" />
+   <file baseinstalldir="/" md5sum="279a24a459e6b2fa91275f42f0aea78c" name="/Cache/Container/db.php" role="php" />
+   <file baseinstalldir="/" md5sum="16546dfbe773f97dfeb37703a09a3b9f" name="/Cache/Container/dbx.php" role="php" />
+   <file baseinstalldir="/" md5sum="019e97eb165fba6e700ced2e4def74aa" name="/Cache/Container/file.php" role="php" />
+   <file baseinstalldir="/" md5sum="51775b849bf1179638f2a598b73615f1" name="/Cache/Container/mdb.php" role="php" />
+   <file baseinstalldir="/" md5sum="f769958f25c4b7d56835c7366392dad4" name="/Cache/Container/mdb_cache_schema.xml" role="data" />
+   <file baseinstalldir="/" md5sum="c5d4bcfe5e02f53473c27e9eb7ed8110" name="/Cache/Container/msession.php" role="php" />
+   <file baseinstalldir="/" md5sum="fdd514ab5ca028045250fa219a611d20" name="/Cache/Container/phplib.php" role="php" />
+   <file baseinstalldir="/" md5sum="e4ef87f418975dfbb05a6b97f525fa8f" name="/Cache/Container/shm.php" role="php" />
+   <file baseinstalldir="/" md5sum="f7f06e2f7e1745ea6ecc71db8f02796f" name="/Cache/Container/trifile.php" role="php" />
+   <file baseinstalldir="/" md5sum="55b2404f731ae37b63f44c3b07c1c028" name="/Cache/HTTP/Request.php" role="php" />
+   <file baseinstalldir="/" md5sum="7fbe0f43de6a20fc03482b2025bf4d65" name="/tests/AllTests.php" role="php" />
+   <file baseinstalldir="/" md5sum="da1083d0561f37845e1a862cd3c89a3f" name="/tests/CacheTest.php" role="php" />
+   <file baseinstalldir="/" md5sum="6bb0dfeabede578d2db08946478ae278" name="/tests/Cache_Container_fileTest.php" role="php" />
+   <file baseinstalldir="/" md5sum="45d4f2306ab31ac902b7d75e9e0d39d4" name="/tests/phpunit.xml" role="data" />
+   <file baseinstalldir="/" md5sum="e3b4238448c4770661cf8527f42b348c" name="Cache.php" role="php" />
   </dir>
  </contents>
-
  <dependencies>
   <required>
    <php>
@@ -99,26 +89,8 @@ Bug #17020 PHP-Error - doconnor
    </package>
   </optional>
  </dependencies>
-
  <phprelease />
-
  <changelog>
-  <release>
-   <version>
-    <release>1.5.5RC4</release>
-    <api>1.5.5RC4</api>
-   </version>
-   <stability>
-    <release>beta</release>
-    <api>beta</api>
-   </stability>
-    <date>2005-09-14</date>
-   <license uri="http://www.php.net/license">PHP License</license>
-   <notes>
-- Fixed Bug #4449 XML errors during installation
-   </notes>
-  </release>
-
   <release>
    <version>
     <release>1.5.4</release>
@@ -135,7 +107,6 @@ Bug #17020 PHP-Error - doconnor
 - Added trifile container. See http://atomized.org/PEAR/Cache_trifile.html for more information. (By Ian Eure)
    </notes>
   </release>
-
   <release>
    <version>
     <release>1.5.5RC1</release>
@@ -156,7 +127,6 @@ Bug #17020 PHP-Error - doconnor
 - CS fixes
    </notes>
   </release>
-
   <release>
    <version>
     <release>1.5.5RC2</release>
@@ -172,7 +142,6 @@ Bug #17020 PHP-Error - doconnor
 - package.xml was giving errors when installed because of new line at the end.
    </notes>
   </release>
-
   <release>
    <version>
     <release>1.5.5RC3</release>
@@ -188,7 +157,21 @@ Bug #17020 PHP-Error - doconnor
 - Fixed bug #4429 Call-time pass-by-reference has been deprecated
    </notes>
   </release>
-
+  <release>
+   <version>
+    <release>1.5.5RC4</release>
+    <api>1.5.5RC4</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2005-09-14</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+- Fixed Bug #4449 XML errors during installation
+   </notes>
+  </release>
   <release>
    <version>
     <release>1.5.6</release>
@@ -203,6 +186,25 @@ Bug #17020 PHP-Error - doconnor
    <notes>
 Automatically built QA release
 Bug #17020 PHP-Error - doconnor
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.5.7</release>
+    <api>1.5.5</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2011-09-15</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+QA release
+Bug #18409 package.xml invalid, not installable with pyrus
+Bug #18734 proposal of code to start new features
+Bug #18742 container Constructor fail
+Bug #18743 Unit Tests
    </notes>
   </release>
  </changelog>
