--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,13 @@
     },
     "type": "library",
     "require": {
-        "pear/pear_exception": "*"
+        "pear/pear_exception": "*",
+        "pear/pear": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
+    },
+    "suggest": {
+        "pear/http_request": "Install optionally via your project's composer.json"
     }
 }
